Fix results counter margin on mobile

--- a/koreanhandbook/scss/partials/_media-queries.scss
+++ b/koreanhandbook/scss/partials/_media-queries.scss
@@ -23,6 +23,9 @@
       .list .list__row, .list .column__title {
         padding: 0;
       }
+      .row__search .resultsCounter {
+        margin-left: 0;
+      }
     }
   }
 }
